syntax = "proto3";

package user.v1alpha;

import "google/protobuf/timestamp.proto";
import "user/v1alpha/message.proto";

option go_package = "stubs";

service UserService {
  rpc Find(FindRequest) returns (FindResponse);
  rpc CheckPassword(CheckPasswordRequest) returns (CheckPasswordResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc UpdatePassword(UpdatePasswordRequest) returns (UpdatePasswordResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc MakeAdmin(MakeAdminRequest) returns (MakeAdminResponse);
}
