syntax = "proto3";

package user.v1alpha;

import "google/protobuf/timestamp.proto";

enum UserRole {
  USER_ROLE_BASIC = 0;
  USER_ROLE_ADMIN = 1;
}

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;

  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;

  UserRole role = 7;
}

message RegisterRequest {
  string password = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
}

message RegisterResponse {
  User user = 1;
}

message UpdateRequest {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
}

message UpdateResponse {
  User user = 1;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
  User user = 1;
}

message UpdatePasswordRequest {
  string id = 1;
  string password = 2;
}

message UpdatePasswordResponse {
  User user = 1;
}

message FindRequest {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
}

message FindResponse {
  repeated User user = 1;
}

message CheckPasswordRequest {
  string email = 1;
  string password = 2;
}

message CheckPasswordResponse {
  enum STATUS {
    OK = 0;
    WRONG_PASSWORD = 1;
    NOT_FOUND = 2;
    INTERNAL = 3;
  }
  STATUS status = 1;
  User user = 2;
}

message MakeAdminRequest {
  string id = 1;
  string email = 2;
}
message MakeAdminResponse {
  User user = 1;
}
